<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_general">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_general"
        android:text="@string/title_log_out"
        android:textSize="@dimen/font_size_twenty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/alert_signout"
        android:textColor="@color/grey_light"
        android:textSize="@dimen/font_size_fifteen" />

    <TextView
        android:id="@+id/signoutBottomSheetConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_general_double"
        android:background="@drawable/rectangle_corners_radius"
        android:gravity="center"
        android:paddingStart="@dimen/margin_general_fourty"
        android:paddingTop="@dimen/padding_general"
        android:paddingEnd="@dimen/margin_general_fourty"
        android:paddingBottom="@dimen/padding_general"
        android:text="@string/title_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_fourteen" />

    <TextView
        android:id="@+id/signoutBottomSheetCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_general"
        android:layout_marginBottom="@dimen/margin_general"
        android:padding="@dimen/padding_general_fifteen"
        android:paddingStart="@dimen/margin_general_fourty"
        android:paddingEnd="@dimen/margin_general_fourty"
        android:text="@string/title_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_fourteen" />

</LinearLayout>