<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background">

        <LinearLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general_double"
            android:gravity="center">

            <TextView
                android:id="@+id/sendSmsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_corners_radius"
                android:padding="@dimen/padding_general"
                android:text="@string/title_sms"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_fifteen" />

            <TextView
                android:id="@+id/sendEmailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_general_double"
                android:background="@drawable/rectangle_corners_radius"
                android:padding="@dimen/padding_general"
                android:text="@string/title_email"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_fifteen" />

            <ImageView
                android:id="@+id/whatsappBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_general_double"
                android:src="@drawable/ic_whatsapp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/remarksRecylerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topView"
            android:layout_marginTop="@dimen/margin_general"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/additionalRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remarksRecylerView"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/margin_general_fifteen"
            android:layout_marginEnd="@dimen/margin_general"
            android:text="@string/title_additional_remark"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_fifteen" />

        <EditText
            android:id="@+id/additionalRemarkEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/additionalRemark"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/margin_general_half"
            android:layout_marginEnd="@dimen/margin_general"
            android:background="@drawable/rectangle_with_rounded_stroke"
            android:gravity="top|start"
            android:maxLines="5"
            android:minLines="5"
            android:padding="@dimen/padding_general" />

        <Button
            android:id="@+id/submitRemarkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/additionalRemarkEditTxt"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/margin_general_tripple"
            android:layout_marginEnd="@dimen/margin_general"
            android:background="@color/colorPrimaryDark"
            android:elevation="@dimen/margin_general_double"
            android:padding="@dimen/margin_general"
            android:text="@string/title_submit_remark"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_sixteen" />

    </RelativeLayout>
</ScrollView>