<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_general_fifteen">

    <ImageView
        android:id="@+id/loginBackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_chevron_left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_general_fifty"
        android:text="@string/title_log_in"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_thirty_five"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_general"
        android:layout_marginTop="@dimen/margin_general_double"
        android:layout_marginEnd="@dimen/margin_general"
        android:background="@drawable/rectangle_rounded_white"
        android:orientation="vertical"
        android:padding="@dimen/padding_general">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_username"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/font_size_twenty" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/font_size_twenty" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_general"
        android:layout_marginTop="@dimen/margin_general_double"
        android:layout_marginEnd="@dimen/margin_general"
        android:background="@color/colorPrimaryDark"
        android:elevation="@dimen/margin_general_double"
        android:padding="@dimen/margin_general"
        android:text="@string/title_log_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_sixteen" />
</LinearLayout>